--- a/gear2.html
+++ b/gear2.html
@@ -24,7 +24,7 @@
             right: 40px;
             transform: translateY(-50%);
             width: 600px;
-            height: 700px;
+            height: 500px;
             border: 3px solid #333;
             overflow: hidden;
         }
@@ -188,7 +188,7 @@
                 <div class="dropdown-container">
                     <select id="gearSelect" class="gear-dropdown">
                         <option value="">Choose a Gear...</option>
-                        <option value="openpage.html">Base Form</option>
+                        <option value="index.html">Base Form</option>
                         <option value="gear3.html">Gear Third</option>
                         <option value="gear4.html">Gear Fourth</option>
                         <option value="gear5.html">Gear Fifth</option>
@@ -214,5 +214,4 @@
         });
     </script>
 </body>
-
 </html>
