--- a/gear3.html
+++ b/gear3.html
@@ -194,7 +194,7 @@
                 <div class="dropdown-container">
                     <select id="gearSelect" class="gear-dropdown">
                         <option value="">Choose a Gear...</option>
-                        <option value="openpage.html">Base Form</option>
+                        <option value="index.html">Base Form</option>
                         <option value="gear2.html">Gear Second</option>
                         <option value="gear4.html">Gear Fourth</option>
                         <option value="gear5.html">Gear Fifth</option>
