--- a/gear5.html
+++ b/gear5.html
@@ -189,7 +189,7 @@
                 <div class="dropdown-container">
                     <select id="gearSelect" class="gear-dropdown">
                         <option value="">Choose a Gear...</option>
-                        <option value="openpage.html">Base Form</option>
+                        <option value="index.html">Base Form</option>
                         <option value="gear2.html">Gear Second</option>
                         <option value="gear3.html">Gear Third</option>
                         <option value="gear4.html">Gear Fourth</option>
