--- a/gear2.html
+++ b/gear2.html
@@ -188,7 +188,7 @@
                 <div class="dropdown-container">
                     <select id="gearSelect" class="gear-dropdown">
                         <option value="">Choose a Gear...</option>
-                        <option value="index.html">Base Form</option>
+                        <option value="openpage.html">Base Form</option>
                         <option value="gear3.html">Gear Third</option>
                         <option value="gear4.html">Gear Fourth</option>
                         <option value="gear5.html">Gear Fifth</option>
