--- a/gear4.html
+++ b/gear4.html
@@ -190,7 +190,7 @@
                 <div class="dropdown-container">
                     <select id="gearSelect" class="gear-dropdown">
                         <option value="">Choose a Gear...</option>
-                        <option value="index.html">Base Form</option>
+                        <option value="openpage.html">Base Form</option>
                         <option value="gear2.html">Gear Second</option>
                         <option value="gear3.html">Gear Third</option>
                         <option value="gear5.html">Gear Fifth</option>
